test/scc/pp/errors/061.a
061.t:1:14: error: empty library name